# pyrin-research

pow-hash/: .gitignore
pow-hash/gpu/: blake3  blake3.cu  cuda.py  cuda_uint256.py  heavy_hash.cu  kernel.cu  miner.py  state.cu  state.py
pow-hash/gpu/tests/: test_blake3.py  test_cuda.py  test_heavy_hash.py  test_state.py  test_uint256.py
pow-hash/miner/: matrix.py  miner.py  miner_multicore.py  requirements.txt  state.py  uint256.py  utils.py
pow-hash/miner/blocks/: block.json
pow-hash/miner/tests/: test.block.json  test.block.mining.json  test.block.pow.json  test_hashers.block.json  test_hashes.py  test_mining.py  test_submit_block.py  test_uint256.py  test_utils.py
pyrin-stratum/: Cargo.toml  README.md
pyrin-stratum/src/: cli.rs  client.rs  json_rpc.rs  main.rs  state.rs  stratum.rs  stratum_server.rs
pyrin_app/: .gitignore  README.md  pubspec.yaml
pyrin_app/android/app/: build.gradle
pyrin_app/assets/: pyrin_flutter_bg.wasm
pyrin_app/ios/Runner/: Info.plist
pyrin_app/ios/Runner.xcodeproj/: project.pbxproj
pyrin_app/lib/: assets_history.dart  assets_section.dart  home_section.dart  main.dart  menu_section.dart  receive_page.dart  send_page.dart  swap_section.dart  tokens_page.dart  ui.dart
pyrin_app/lib/components/: addressbook.dart  navigation_bar.dart  select_token.dart  tokens_list.dart
pyrin_app/lib/core/: addressbook.dart  page.dart  section.dart  token.dart  (+2 more)
pyrin_app/linux/: CMakeLists.txt  my_application.cc
pyrin_app/test/: widget_test.dart
pyrin_app/web/: index.html  manifest.json
pyrin_app/windows/: CMakeLists.txt
(+15 files in other folders)
