[package]
name = "pyrin-stratum"
version = "0.1.0"
edition = "2021"
authors = ["Ido Filus", "Pyrin"]
repository = "https://github.com/PyrinNetwork/stratum"
license = "MIT or Apache-2.0"
keywords = ["pyrin", "stratum"]
description = "Pyrin Stratum allowing multiple miners to work together to mine a block"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
kaspa-consensus-core = { git = "https://github.com/PyrinNetwork/pyrin", branch = "master" }
kaspa-notify = { git = "https://github.com/PyrinNetwork/pyrin", branch = "master" }
kaspa-rpc-core = { git = "https://github.com/PyrinNetwork/pyrin", branch = "master" }
kaspa-grpc-client = { git = "https://github.com/PyrinNetwork/pyrin", branch = "master" }
kaspa-addresses = { git = "https://github.com/PyrinNetwork/pyrin", branch = "master" }
kaspa-pow = { git = "https://github.com/PyrinNetwork/pyrin", branch = "master" }
async-channel = "2.3.1"
tonic = "0.12.3"
async-stream = "0.3.6"
futures = "0.3.31"
tokio-util = "0.7.12"
byteorder = "1.5.0"
hex = "0.4.3"
